# IWST

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg
src/iwst/: __init__.py  app.py  wsgi.py
src/iwst/routes/home/: callbacks.py  layout.py
src/iwst/routes/home/components/: placeholder.py  sidebar.py  tabs.py  toolbar.py
src/iwst/routes/home/data/: boreholeandmohrcoulomb.md  breakouts.md  tensilefracture.md
src/iwst/routes/home/utils/: borehole_stress.py  defaults.py  overlay.py  polar_plot_borehole.py  polar_tensile.py  utils.py
src/iwst/routes/homeevaluation/: callbacks.py  layout.py
src/iwst/routes/homeevaluation/components/: placeholder.py
src/iwst/routes/userguide/: example.md
src/iwst/static/: manifest.json
src/iwst/static/css/: login.css
src/iwst/templates/: login.html  notsupported.html
src/iwst/test/: iwst.conf
src/iwst/tools/: cmd.py
src/iwst/utils/: config.py  logging.py  login.py
