[metadata]
name = iwst
version = attr: iwst.__version__
author = Stefano Gianbattista Fanizzi
author_mail = stefano.fanizzi@isamgeo.com
long_description = file: README.md
classifiers=
    Framework :: Flask 
    Development Status :: 1 - Dev
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3.10
    Topic :: Scientific :: Data Analysis

[options]
python_requires = >=3.12
packages = find:
package_dir = 
    = src
install_requires =
  dash
  dash-mantine-components
  dash-ag-grid
  dash-iconify
  plotly
  numpy
  scipy
  pandas
  gunicorn
  pymongo
  kaleido
  pyyaml
  flask
  flask-login
  flask_security
  flask-bcrypt
  rich
  matplotlib

zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  iwst = iwst.tools.cmd:iwst
